# text_verbalizer

./: README.md  pyproject.toml
normalizer/: __init__.py
normalizer/languages/: __init__.py
normalizer/languages/swahili/: __init__.py  currency.py  number.py  time.py
tests/: test_swahili.py
text_verbalizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
verbalizer/: __init__.py  base.py
verbalizer/languages/: __init__.py
verbalizer/languages/swahili/: __init__.py  config.py  currency.py  date.py  number.py  time.py
